# chess_botz

./: .gitmodules  CMakeLists.txt
assets/shaders/: default.frag  default.vert
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: SDL_ext.c  SDL_ext.h  board.c  board.h  chess.c  chess.h  entry.c  entry.cpp  entry.h  entry.hpp  event.c  event.h  game.c  game.cpp  game.h  logg.c  logg.h  main.c  main.h  scene.h  shader.c  shader.h  types.h
src/engine/: engine.cpp  engine.hpp  entry.cpp  entry.hpp  logger.hpp  types.hpp
src/gfx/: camera.c  camera.h  ebo.c  ebo.h  fbo.c  fbo.h  frame.c  frame.h  gfx.h  image.c  image.h  rbo.c  rbo.h  shader.c  shader.h  texture.c  texture.h  vao.c  vao.h  vbo.c  vbo.h
